@@ -1,4 +1,5 @@
  * Add input types to entry fields
+ * Show username in the title list for TAN entries
 
 KeePassDroid (1.9.17)
  * Updated Russian translations from I Nedoboy
